--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #e5e5e5;
+  background-color: #f4fcf1;
 }
 
 .logo {
@@ -33,23 +33,31 @@
   top: 207px;
   background-color: #c4e7c1;
   border-color: #548d27;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   border-radius: 11px;
   border-style: solid;
+  padding: 3px;
 }
 
 a {
-  align-items: center;
-  width: 90px;
-  height: 37px;
-  left: 80px;
-  top: 207px;
+  color: black;
+  text-align: center;
+  font-size: x-large;
+  text-decoration: none;
+  /* align-items: center; */
+  width: 124px;
+  height: 43px;
+  left: 119px;
+  top: 371px;
   background-color: #c4e7c1;
   border: #548d27;
   border-style: solid;
   border-radius: 11px;
+  transition: opacity 0.2s;
+  margin-top: 11px;
 }
 
 img {
+  margin-top: 50px;
   height: 150px;
 }
