--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -33,7 +33,7 @@
 .button {
   /* display: inline-block; */
   color: white;
-  /* text-align: center; */
+  text-align: center;
   /* font-size: x-large; */
   text-decoration: none;
   /* align-items: center; */
