--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -31,17 +31,13 @@
   top: 207px;
   background-color: #c4e7c1;
   border-color: #548d27;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   border-radius: 11px;
   border-style: solid;
+  text-shadow: 0 0 black;
 }
 
 .button {
-  /* font-family: roboto; */
-  text-align: center;
-  font-size: x-large;
-  /* text-decoration: none; */
-  align-items: center;
   width: 124px;
   height: 43px;
   left: 119px;
@@ -49,13 +45,14 @@
   border: #548d27;
   border-style: solid;
   border-radius: 11px;
-  /* transition: opacity 0.2s; */
   margin-top: 11px;
   display: inline-block;
-  text-align: center;
-  line-height: 33px;
+  padding: 0;
+  align-items: center;
+  box-sizing: content-box;
 }
+
 img {
-  margin-top: 50px;
+  margin-top: 20px;
   height: 150px;
 }
