--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -50,9 +50,21 @@
   display: inline-block;
   text-align: center;
   line-height: 40px;
+  margin-bottom: 30px;
 }
 
 img {
   margin-top: 50px;
   height: 150px;
+}
+
+.link {
+  text-decoration: none;
+  border: 4px;
+  border-color: green;
+  padding: 10px;
+  font-size: 13px;
+  background: #5aaa5a;
+  color: white;
+  border-radius: 25px;
 }
