--- a/src/pages/User/styles.css
+++ b/src/pages/User/styles.css
@@ -8,3 +8,29 @@
   background-color: #fff;
   color: black;
 }
+
+.home-main .cards button {
+    position: absolute;
+    right: 1px;
+    top: 3px;
+    border: 0;
+    background-color: #c4e7c1;
+    font-size: 24px;
+    color: gray;
+}
+
+.home-main .cards button:hover{
+  opacity: 0.8;
+}
+
+.cards .card {
+    display: block;
+    margin: 10px;
+    padding: 2rem;
+    list-style: none;
+    background: #c4e7c1;
+    padding: 24px;
+    border-radius: 8px;
+    position: relative;
+    padding: 9px;
+}
