--- a/src/pages/components/ActionModal/styles.css
+++ b/src/pages/components/ActionModal/styles.css
@@ -1,13 +1,33 @@
 .actionModal {
-  background-color: #0f3c38db;
-  color: #fff;
+  background: transparent;
+  background-color: #1c502ab3;
+  color: #fffffffd;
   border-top: 1px solid #333;
   bottom: 50%;
-  left: 5%;
-  height: 49px;
+  left: 32%;
+  height: 88px;
   position: fixed;
-  width: 90%;
+  width: 37%;
   text-align: center;
-  border-radius: 50px;
-  transition: all 0.5s ease-in-out;
+  border-radius: 10px;
+  /* transition: all 0.5s ease-in-out; */
+  font-size: 140%;
+  justify-content: center;
+  align-items: center;
+  padding-top: 46px;
+  border: 1.5px solid #0f3c38db;
+  font-weight: bold;
+  /* border-style: dashed; */
+  /* border: solid; */
+}
+
+text.actionModal {
+  transition: all 500ms;
+}
+
+text.actionModal.hide {
+  opacity: 0;
+  visibility: hidden;
+  height: 0;
+  margin-top: -70px;
 }
